--- a/css/styles.css
+++ b/css/styles.css
@@ -81,6 +81,10 @@ section {
     text-decoration: none;
     color: #000;
 }
+.active{
+    color: red !important;
+
+}
 
 .navbar__menu .menu__link:hover {
     background: #333;
